sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: not found: value n
    n=i-1
    ^AlgInsertionSort:8: error: not found: value n
    while (plusPetit(i,n)){
                       ^AlgInsertionSort:9: error: not found: value n
        copie(n,n+1)
              ^AlgInsertionSort:9: error: not found: value n
        copie(n,n+1)
                ^AlgInsertionSort:10: error: not found: value n
        n-=1
        ^AlgInsertionSort:11: error: not found: value n
      last=n
           ^