sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var valeur=0
  var last=0
  for (i<-1 to getNombreValeurs()-1){
    valeur = getValeur(i)
    n=i-1
    while (plusPetit(i,n)){
        copie(n,n+1)
        n-=1
      last=n
      }
    setValeur(last, valeur)
  }
}